--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+    <script src="https://use.fontawesome.com/1643470471.js"></script>
   </head>
   <body ng-app="directoryApp">
     <div class="container" ng-controller="ListingsController as listCtrl">
@@ -41,7 +42,7 @@
                     <tr ng-repeat="data in listings | filter:searchText" ng-click="showDetails(listings.indexOf(data))">
                       <td> {{data.code}} </td>
                       <td>  {{data.name}}</td>
-                      <td><button ng-click="deleteListing(listings.indexOf(data))">delete</button></td>
+                      <td><center><i class="fa fa-times" aria-hidden="true" ng-click="deleteListing(listings.indexOf(data))"></i></center></td>
 
                     </tr>
 
